--- a/deploy_tools/gunicorn-systemd.template.service
+++ b/deploy_tools/gunicorn-systemd.template.service
@@ -7,9 +7,7 @@ User=Fred
 WorkingDirectory=/home/fred/sites/DOMAIN
 EnvironmentFile=/home/fred/sites/DOMAIN/.env
 
-ExecStart=/home/fred/sites/DOMAIN/virtualenv/bin/gunicorn \
-    --bind unix:/tmp/DOMAIN.socket \
-    superlists.wsgi:application
+ExecStart=/home/fred/sites/DOMAIN/virtualenv/bin/gunicorn --bind unix:/tmp/DOMAIN.socket superlists.wsgi:application
 
 [Install]
 WantedBy=multi-user.target
