--- a/deploy_tools/nginx.template.conf
+++ b/deploy_tools/nginx.template.conf
@@ -2,12 +2,12 @@ server {
     listen 80;
     server_name DOMAIN;
 
-    location /static{
+    location /static {
         alias /home/fred/sites/DOMAIN/static;
     }
 
     location / {
         proxy_pass http://unix:/tmp/DOMAIN.socket;
-        proxy_set_header HOST $host;
+        proxy_set_header Host $host;
     }
 }
